# auto-simctl

./: .gitignore  PLAN.md  README.md  cli.py  logger.py  pyproject.toml  requirements.txt  setup.sh  test_dialog_understanding.py  test_ui_ug.py  test_ui_ug_settings.py  ui_server.py  vision_screenshot_server.py
agents/: __init__.py  prompts.py  qwen_agent.py  ui_agent.py
mcp_server/: server.py
mdb/: __init__.py  bridge.py  models.py  screen.py
mdb/backends/: __init__.py  adb_backend.py  idb_backend.py
orchestrator/: __init__.py  loop.py  result.py
