[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-simctl"
version = "0.1.0"
description = "Intelligent mobile simulator control — AI-driven device testing for vibe coding"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "auto-simctl" }]
dependencies = [
    "fb-idb>=1.1.0",
    "pure-python-adb>=0.2.2.dev0",
    "mlx-openai-server>=1.6.0",
    "mlx-vlm>=0.4.0",
    "openai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastmcp>=2.0.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
auto-simctl = "cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdb*", "agents*", "orchestrator*", "mcp_server*"]
